[package]
name = "urbit"
version = "0.0.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Urbit utilities"
repository = "https://github.com/rsaarelm/urbit-rs"
license = "MIT OR Apache-2.0"

[dependencies]
nock = "0.2.1"
fnv = "1.0"
time = "0.1"
num = "0.1"
bit-vec = "0.4"

[[example]]
name = "urbit"
path = "examples/urbit.rs"
