[package]
name = "urbit"
version = "0.0.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Urbit utilities"
repository = "https://github.com/rsaarelm/urbit-rs"
license = "MIT OR Apache-2.0"

[dependencies]
fnv = "1.0"
time = "0.1"
num = "0.1"

[dependencies.nock]
git = "https://github.com/rsaarelm/nock-rs"
